# telegram-bot-starter-python

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: app.py  auth.py  constants.py  models.py  settings.py
bot/dataaccess/: users.py
bot/handlers/: hello_world.py
migrations/: env.py
migrations/versions/: be6c186d6865_basic_user_data.py
