[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Camilo Zapata <zapata.camilo.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.1.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.17"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
pre-commit = "^3.7.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
