[project]
name = "telegram-bot-starter-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "python-telegram-bot>=21.9",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]
